[gd_scene load_steps=26 format=3 uid="uid://daualgspc8ab8"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_fsqhw"]
[ext_resource type="Texture2D" uid="uid://bw0q8rn62coar" path="res://enemy/slimer-idle.png" id="1_nkcbu"]
[ext_resource type="Texture2D" uid="uid://bt8o150de256p" path="res://enemy/Desappearing (96x96).png" id="2_r373m"]
[ext_resource type="Texture2D" uid="uid://glsgn7p0g6ec" path="res://enemy/dino.png" id="3_w5rur"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3syad"]
atlas = ExtResource("1_nkcbu")
region = Rect2(0, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_uupx4"]
atlas = ExtResource("1_nkcbu")
region = Rect2(41, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmu0o"]
atlas = ExtResource("1_nkcbu")
region = Rect2(82, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_25guf"]
atlas = ExtResource("1_nkcbu")
region = Rect2(123, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_xax05"]
atlas = ExtResource("1_nkcbu")
region = Rect2(164, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_kngot"]
atlas = ExtResource("1_nkcbu")
region = Rect2(205, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjm65"]
atlas = ExtResource("1_nkcbu")
region = Rect2(246, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w4o2"]
atlas = ExtResource("1_nkcbu")
region = Rect2(287, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6fpp"]
atlas = ExtResource("2_r373m")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tm2p"]
atlas = ExtResource("2_r373m")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6bf4"]
atlas = ExtResource("2_r373m")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_siss2"]
atlas = ExtResource("3_w5rur")
region = Rect2(0, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_txjqc"]
atlas = ExtResource("3_w5rur")
region = Rect2(32, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ryvf"]
atlas = ExtResource("3_w5rur")
region = Rect2(64, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qows"]
atlas = ExtResource("3_w5rur")
region = Rect2(96, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_t33pe"]
atlas = ExtResource("3_w5rur")
region = Rect2(128, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_blshy"]
atlas = ExtResource("3_w5rur")
region = Rect2(160, 0, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf48g"]
atlas = ExtResource("3_w5rur")
region = Rect2(192, 0, 32, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_ynyto"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3syad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uupx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmu0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25guf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xax05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kngot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjm65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w4o2")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6fpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tm2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6bf4")
}],
"loop": true,
"name": &"killed",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_siss2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txjqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ryvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qows")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t33pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blshy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf48g")
}],
"loop": true,
"name": &"running",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lktx0"]
radius = 21.0238

[sub_resource type="CircleShape2D" id="CircleShape2D_2y02k"]
radius = 23.0

[node name="Slime" type="RigidBody2D"]
script = ExtResource("1_fsqhw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(4, -0.999999)
scale = Vector2(1.5625, 1.69231)
sprite_frames = SubResource("SpriteFrames_ynyto")
autoplay = "default"
frame_progress = 0.231594

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 14)
shape = SubResource("CircleShape2D_lktx0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, 14)
shape = SubResource("CircleShape2D_2y02k")

[node name="killed_timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="killed_timer" to="." method="_on_killed_timer_timeout"]
